--- a/elegant.scss
+++ b/elegant.scss
@@ -47,7 +47,7 @@ $link-color: #aaaaaa;
 
 // Fonts
 $font-family-base: Montserrat;
-$headings-font-family: Cormorant Garamond;
+$headings-font-family: Montserrat;
 $font-size-base: 0.8rem;
 $font-weight-normal: 300;
 $headings-line-height: 1.2;
